--- a/index.html
+++ b/index.html
@@ -1,30 +1,31 @@
 <!DOCTYPE html>
 <head lang="en">
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Calculator</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
 </head>
 <body>
-<div class="calculator">    
-    <div class="display"></div>
-        <button class="clear">AC</button>
-        <button class="delete" data-key="Backspace">Del</button>
-        <button class="substraction operator" data-key="Minus">-</button>
-        <button class="num" data-key="Digit1">1</button>
-        <button class="num" data-key="Digit2">2</button>
-        <button class="addition operator" data-key="NumpadAdd">+</button> 
-        <button class="num" data-key="Digit3">3</button>
-        <button class="num" data-key="Digit4">4</button>
-        <button class="multiplication operator" data-key="KeyX">X</button>
-        <button class="num" data-key="Digit5">5</button>
-        <button class="num" data-key="Digit6">6</button>
-        <button class="division operator" data-key="Slash">/</button>
-        <button class="num" data-key="Digit7">7</button>
-        <button class="num" data-key="Digit8">8</button>
-        <button class="decimal" data-key="Period">.</button>
-        <button class="num" data-key="Digit9">9</button>
-        <button class="num" data-key="Digit0">0</button>
-        <button class="equals" data-key="Equal">=</button>
-</div>
+    <div class="calculator">    
+        <div class="display"></div>
+            <button class="clear">AC</button>
+            <button class="delete" data-key="Backspace">Del</button>
+            <button class="substraction operator" data-key="Minus">-</button>
+            <button class="num" data-key="Digit1">1</button>
+            <button class="num" data-key="Digit2">2</button>
+            <button class="addition operator" data-key="NumpadAdd">+</button> 
+            <button class="num" data-key="Digit3">3</button>
+            <button class="num" data-key="Digit4">4</button>
+            <button class="multiplication operator" data-key="KeyX">X</button>
+            <button class="num" data-key="Digit5">5</button>
+            <button class="num" data-key="Digit6">6</button>
+            <button class="division operator" data-key="Slash">/</button>
+            <button class="num" data-key="Digit7">7</button>
+            <button class="num" data-key="Digit8">8</button>
+            <button class="decimal" data-key="Period">.</button>
+            <button class="num" data-key="Digit9">9</button>
+            <button class="num" data-key="Digit0">0</button>
+            <button class="equals" data-key="Equal">=</button>
+    </div>
 </body>
